# josh_udcn_course1

./: .gitignore  README.md
.github/workflows/: docker-build.yml  pytest.yml  python-version.yml  techtrends-dockerhub.yml
exercises/: Vagrantfile
exercises/go-helloworld/: Dockerfile  docker-compose.yml
exercises/python-helloworld/: .dockerignore  Dockerfile  app.py  pyproject.toml
project/: Dockerfile  Vagrantfile  docker-compose.yml  docker_commands  feedback.md
project/argocd/: helm-techtrends-prod.yaml  helm-techtrends-staging.yaml
project/helm/: Chart.yaml  values-prod.yml  values.yml
project/helm/templates/: deployment.yml  namespace.yml  service.yml
project/kubernetes/: deployment.yml  namespace.yaml  service.yml
project/techtrends/: README.md  app.py  pyproject.toml
